fix: adjust footer semantics and bottom spacing

--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -11,5 +11,6 @@
   .footer__copyright {
     font-size: 18px;
     line-height: 21.78px;
+    padding-bottom: 60px;
   }
 }
